nye ændirnger med video og pics

--- a/index.html
+++ b/index.html
@@ -5,20 +5,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="general.css" />
-    <title>Document</title>
+    <meta name="robots" content="noindex" />
+    <link rel="stylesheet" href="style.css" />
+
+    <title>Marianne</title>
 </head>
 
 <body>
     <header>
         <nav>
-            <ul>
-                <li class="andet"><a href="andet.html">Andet</a></li>
-                <li class="video"><a href="video.html">Video</a></li>
-            </ul>
-        </nav>
-    </header>
 
+            <h1>Marianne</h1>
+
+        </nav>
+        <div class="grid_1234">
+            <div>
+                <img src=" pics/marianne1.webp" alt="marianne1">
+            </div>
+            <div>
+                <img src="pics/marianne2.webp" alt="marianne2">
+            </div>
+            <div>
+                <img src="pics/marianne3.webp" alt="marianne3">
+            </div>
+        </div>
+
+        <video controls src="Marianne.mp4"></video>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/3HderTSpIjw" title="YouTube video player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+    </header>
 </body>
 
 </html>
